--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -4,6 +4,7 @@
     <h1>비밀번호 변경</h1>
     <form action="{% url 'accounts:change_password' %}" method="post">
         {% csrf_token %}
+        {{form.as_p}}
         <input type="submit" value='Submit'>
     </form>
 {% endblock content %}
